--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   },
   "dependencies": {
     "@azure/functions": "^4.9.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "googleapis": "^126.0.1",
-    "morgan": "^1.10.0"
+    "googleapis": "^126.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
